--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,12 +1,25 @@
-<li>
-  <span class="content"><%= quote.text %></span>
-  <span class="timestamp">
-    <%= time_ago_in_words(quote.created_at) %> geleden.
+<li id="quote_<%= quote.id %>">
+  <%= link_to gravatar_for(quote.user), quote.user, class: 'gravatar img img-responsive' %>
+  <span class="user">
+    <%= link_to quote.user.name, quote.user %>
   </span>
-  <%= link_to quote, method: :delete,
-    data: {confirm: 'You sure?'},
-    title: quote.text,
-    class: 'btn btn-default btn-sm' do %>
-    <i class="fa fa-trash"></i>
-  <% end %>
+  <span class="content">
+    <%= quote.text %>
+  </span>
+  <span class="timestamp">
+    <i class="fa fa-clock-o"></i> <%= time_ago_in_words(quote.created_at) %> geleden.
+  </span>
+  <div class="btn-group">
+    <%= link_to edit_quote_path(quote),
+      class: 'btn btn-default btn-sm' do %>
+      <i class="fa fa-pencil"></i>
+    <% end %>
+    <%= link_to quote,
+      method: :delete,
+      data: {confirm: 'Weet je het zeker?'},
+      title: quote.text,
+      class: 'btn btn-default btn-sm' do %>
+      <i class="fa fa-trash"></i>
+    <% end %>
+  </div>
 </li>
