--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,6 @@
-<% if @feed_items.any? %>
+<% if @quotes.any? %>
     <ol class="microposts">
-      <%= render partial: 'shared/feed_item', collection: @feed_items %>
+      <%= render @quotes %>
     </ol>
-    <%= will_paginate @feed_items %>
+    <%= will_paginate @quotes %>
 <% end %>
