Use Font Awesome 5 and tweak some icons

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,7 @@
  = require "nprogress"
  = require "nprogress-bootstrap"
  = require_tree .
- *= require font-awesome
+ *= require font_awesome5
  *= require rails_bootstrap_forms
  *= require trix
  */
