--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,11 +16,11 @@
             <%= render 'shared/quote_form' %>
           </section>
           <section>
-            <h5><i class="fa fa-calendar"></i> Aankomende activiteiten</h5>
+            <h5><i class="far fa-calendar-alt"></i> Aankomende activiteiten</h5>
             <%= render 'shared/activiteiten' %>
           </section>
           <section>
-            <h5><i class="fa fa-newspaper-o"></i> Recent nieuws</h5>
+            <h5><i class="far fa-newspaper"></i> Recent nieuws</h5>
             <%= render 'shared/news' %>
           </section>
           <section>
@@ -28,7 +28,7 @@
             <%= render 'shared/blog' %>
           </section>
           <section>
-            <h5><i class="fa fa-archive"></i> Log</h5>
+            <h5><i class="fas fa-history"></i> Log</h5>
             <%= render 'shared/trail' %>
           </section>
         </aside>
