--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-8">
     <p>
-    <i class="fa fa-clock-o"></i> <%= @event.date.strftime('%d-%m-%Y %H:%M') %>
+    <i class="far fa-clock"></i> <%= @event.date.strftime('%d-%m-%Y %H:%M') %>
   <% if @event.end_time? %>tot <%= @event.end_time.strftime('%d-%m-%Y %H:%M') %><% end %>
     </p>
     <% if @event.location != nil and @event.location.length > 1 %>
