--- a/app/views/nicknames/index.html.erb
+++ b/app/views/nicknames/index.html.erb
@@ -26,11 +26,11 @@
                 <td>
                   <div class="btn-group">
                     <%= link_to edit_nickname_path(nickname), class: 'btn btn-info' do %>
-                        <i class="fa fa-pencil"></i>
+                        <i class="fas fa-pencil-alt"></i>
                     <% end %>
                     <%= link_to nickname, class: 'btn btn-danger', method: :delete,
                                 data: {confirm: 'Weet je het zeker?'} do %>
-                        <i class="fa fa-trash"></i>
+                        <i class="far fa-trash-alt"></i>
                     <% end %>
                   </div>
                 </td>
