--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -24,10 +24,10 @@
         <td>
           <div class="btn-group">
             <%= link_to edit_public_page_path(m), class: 'btn btn-info' do %>
-                <i class="fa fa-pencil"></i>
+                <i class="fas fa-pencil-alt"></i>
             <% end %>
             <%= link_to m, class: 'btn btn-danger', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
-                <i class="fa fa-trash"></i>
+                <i class="far fa-trash-alt"></i>
             <% end %>
           </div>
         </td>
