--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -7,19 +7,19 @@
     <%= quote.text %>
   </span>
   <span class="timestamp">
-    <i class="fa fa-clock-o"></i> <%= time_ago_in_words(quote.created_at) %> geleden.
+    <i class="far fa-clock"></i> <%= time_ago_in_words(quote.created_at) %> geleden.
   </span>
   <div class="btn-group">
     <%= link_to edit_quote_path(quote),
       class: 'btn btn-default btn-sm' do %>
-      <i class="fa fa-pencil"></i>
+      <i class="fas fa-pencil-alt"></i>
     <% end %>
     <%= link_to quote,
       method: :delete,
       data: {confirm: 'Weet je het zeker?'},
       title: quote.text,
       class: 'btn btn-default btn-sm' do %>
-      <i class="fa fa-trash"></i>
+      <i class="far fa-trash-alt"></i>
     <% end %>
   </div>
 </li>
