--- a/app/views/quotes/_quote_stripped.html.erb
+++ b/app/views/quotes/_quote_stripped.html.erb
@@ -3,13 +3,13 @@
     <%= quote.text %>
   </span>
   <span class="timestamp">
-    <i class="fa fa-clock-o"></i> <%= time_ago_in_words(quote.created_at) %> geleden
+    <i class="far fa-clock"></i> <%= time_ago_in_words(quote.created_at) %> geleden
   </span>
   <%= link_to quote,
               method: :delete,
               data: {confirm: 'You sure?'},
               title: quote.text,
               class: 'btn btn-default btn-sm' do %>
-    <i class="fa fa-trash"></i>
+    <i class="far fa-trash-alt"></i>
   <% end %>
 </li>
