--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -26,10 +26,10 @@ $(document).ready(function () {
         <td>
           <div class="btn-group">
             <%= link_to edit_sticker_path(m), class: 'btn btn-info' do %>
-              <i class="fa fa-pencil"></i>
+              <i class="fas fa-pencil-alt"></i>
             <% end %>
             <%= link_to m, class: 'btn btn-danger', method: :delete, data: {confirm: 'Weet je het zeker?'} do %>
-              <i class="fa fa-trash"></i>
+              <i class="far fa-trash-alt"></i>
             <% end %>
           </div>
         </td>
