--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -21,7 +21,7 @@ function copyToClipboard(element) {
   <tbody>
     <% @logs.each do |l| %>
       <tr>
-        <td><%= l.ip_addr %> / <%= l.created_at.strftime('%d/%m/%Y %H:%M') %></td>
+        <td><%= l.ip_addr %> / <%= l.created_at.strftime('%d-%m-%Y %H:%M') %></td>
         <td><%= l.resource_call %></td>
       </tr>
     <% end %>
