--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,7 +9,7 @@
 
   <body>
     <p>Hallo <%= @user.name %>,</p>
-    <p>Helaas ben je er tot op heden niet in geslaagd je aan of af te melden voor het event: "<%= @event.title %>" op <%= @event.date.strftime("%d/%m/%Y") %>. Om voor iedereen het te verwachte aantal aanwezige leden zo overzichtelijk mogelijk te maken wordt je hierbij verzocht dat zo snel mogelijk alsnog te doen.</p>
+    <p>Helaas ben je er tot op heden niet in geslaagd je aan of af te melden voor het event: "<%= @event.title %>" op <%= @event.date.strftime("%d-%m-%Y") %>. Om voor iedereen het te verwachte aantal aanwezige leden zo overzichtelijk mogelijk te maken wordt je hierbij verzocht dat zo snel mogelijk alsnog te doen.</p>
     <p>Veel succes, moeilijk is het niet</p>
     <p>P.S.</p>
     <p>https://zondersikkel.nl/events/<%= @event.id %></p>
