--- a/app/views/shared/_activiteiten.html.erb
+++ b/app/views/shared/_activiteiten.html.erb
@@ -1,5 +1,9 @@
 <ul>
   <% @events.each do |f| %>
-      <li><%= f.date.strftime('%d/%m/%Y') %> - <%= link_to f.title, f %></li>
+    <li>
+      <%= link_to f do %>
+        <%= f.created_at.strftime('%d-%m-%Y') %> - <%= f.title %>
+      <% end %>
+    </li>
   <% end %>
 </ul>
