--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,10 +1,7 @@
 <%= link_to gravatar_for(current_user, size: 96), current_user, class: 'gravatar img img-responsive' %>
 <h1>
-  <%= current_user.name %>
+  <%= link_to current_user.name, current_user %>
 </h1>
-<span>
-<%= link_to 'Mijn profiel', current_user %>
-</span>
 <span>
 <%= pluralize(current_user.quotes.count, 'quote') %>
 </span>
