--- a/app/views/stickers/personal.html.erb
+++ b/app/views/stickers/personal.html.erb
@@ -16,7 +16,7 @@ $(document).ready(function () {
   <tbody>
     <% @stickers.each do |m| %>
       <tr>
-        <td><%= m.created_at.strftime('%d/%m/%Y %H:%M') %></td>
+        <td><%= m.created_at.strftime('%d-%m-%Y %H:%M') %></td>
         <td><%= "#{m.lat}, #{m.lon}" %><br>
           <% jdata = Net::HTTP.get_response(URI.parse("https://maps.googleapis.com/maps/api/geocode/json?latlng=#{m.lat},#{m.lon}&key=AIzaSyAz0ENeS5X1Vh9A_-KxxENHBf-qQYB2z-U")) %>
           <% mdata = JSON.parse(jdata.body) %>
