--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,11 +28,11 @@
         Sunday Ratio: <%= @user.sunday_ratio.round(2) %>%<br>
       <% end %>
       <% if @user.current_sign_in_at %>
-        Ingelogd op: <br><%= @user.current_sign_in_at.strftime('%d/%m/%Y %H:%M') %> (<%= @user.current_sign_in_ip %>
+        Ingelogd op: <br><%= @user.current_sign_in_at.strftime('%d-%m-%Y %H:%M') %> (<%= @user.current_sign_in_ip %>
         )<br>
       <% end %>
       <% if @user.last_sign_in_at %>
-        Laatste login op: <br><%= @user.last_sign_in_at.strftime('%d/%m/%Y %H:%M') %> (<%= @user.last_sign_in_ip %>)<br>
+        Laatste login op: <br><%= @user.last_sign_in_at.strftime('%d-%m-%Y %H:%M') %> (<%= @user.last_sign_in_ip %>)<br>
       <% end %>
     </section>
     <section>
@@ -41,7 +41,7 @@
         <% unless missed_drinks.empty? %>
           <b>Gemiste Zondagborrels</b><br>
           <% missed_drinks.each do |md| %>
-            <%= link_to md.date.strftime("%d/%m/%Y"), md %><br>
+            <%= link_to md.date.strftime("%d-%m-%Y"), md %><br>
           <% end %>
         <% end %>
       <% end %>
