--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -6,7 +6,7 @@
   <span class="content">
     <%= quote.text %>
   </span>
-  <span class="timestamp">
+  <span class="text-muted">
     <i class="far fa-clock"></i> <%= time_ago_in_words(quote.created_at) %> geleden.
   </span>
   <div class="btn-group">
