--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,5 +1,5 @@
 <% if @quotes.any? %>
-    <ol class="microposts">
+    <ol class="quotes">
       <%= render @quotes %>
     </ol>
     <%= will_paginate @quotes %>
