--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -40,9 +40,9 @@ textarea {
   }
 }
 
-/* microposts */
+/* quotes */
 
-.microposts {
+.quotes {
   list-style: none;
   margin: 10px 0 0 0;
   padding-left: 0;
@@ -54,9 +54,6 @@ textarea {
 }
 .content {
   display: block;
-}
-.timestamp {
-  color: $grayLight;
 }
 .gravatar {
   float: left;
@@ -70,17 +67,12 @@ aside {
 }
 
 /* Users index */
-
 .users {
   list-style: none;
   margin: 0;
   li {
     overflow: auto;
     padding: 3px 0;
-/*    border-top: 1px solid $grayLight;
-    &:last-child {
-      border-bottom: 1px solid $grayLight; 
-    } */
   }
 }
 
@@ -90,8 +82,11 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
-/* header */
+.quote h4 {
+  margin-top: 0;
+}
 
+/* header */
 #logo {
   float: left;
   margin-right: 10px;
@@ -184,11 +179,6 @@ input {
 }
 
 /* other */
-.gravatar {
-  float: left;
-  margin-right: 10px;
-}
-
 .pagination {
   width: 100%;
 }
