het is niet heel boeiend om de created_at tijd te zien

--- a/app/views/shared/_activiteiten.html.erb
+++ b/app/views/shared/_activiteiten.html.erb
@@ -2,7 +2,7 @@
   <% @events.each do |f| %>
     <li>
       <%= link_to f do %>
-        <%= f.created_at.strftime('%d-%m-%Y') %> - <%= f.title %>
+        <%= f.date.strftime('%d-%m-%Y') %> - <%= f.title %>
       <% end %>
     </li>
   <% end %>
