--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <h1><%= yield(:title) %></h1>
+            <%= render 'shared/breadcrumbs' %>
           </div>
         </div>
         <hr>
