--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,7 +22,7 @@
             <%= render 'shared/activiteiten' %>
           </section>
           <section>
-            <%= link_to news_path do %>
+            <%= link_to news_index_path do %>
               <h5><i class="far fa-newspaper"></i> Recent nieuws</h5>
             <% end %>
             <%= render 'shared/news' %>
