--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -28,7 +28,7 @@
             <%= render 'shared/news' %>
           </section>
           <section>
-            <%= link_to blog_items_path do %>
+            <%= link_to blogitems_index_path do %>
               <h5><i class="fa fa-rss"></i> Recente blogposts</h5>
             <% end %>
             <%= render 'shared/blog' %>
