--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer text-center">
   <small>
     <a href="https://zondersikkel.nl/">Hamers zonder Sikkel</a> <br>
-    Copyright © 2018
+    Copyright © <%= Time.current.year %>
   </small>
   <% unless signed_in? %>
     <nav>
