--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -36,11 +36,12 @@
             <% end %>
             <% if current_user.admin? %>
               <td>
-                <div class="btn-group">
-                  <%= link_to 'Wijzig', edit_user_path(user), class: 'btn btn-info' %>
-                  <%= link_to 'Verwijder', user, class: 'btn btn-danger', method: :delete,
-                    data: {confirm: 'Weet je het zeker?'} %>
-              </div>
+                <%= link_to 'Wijzig', edit_user_path(user), class: 'btn btn-info' do %>
+                  <i class="fas fa-pencil-alt"></i>
+                <% end %>
+                <%= link_to 'Verwijder', user, class: 'btn btn-danger', method: :delete,
+                  data: {confirm: 'Weet je het zeker?'} do %>
+                  <i class="far fa-trash-alt"></i>
               </td>
             <% end %>
           </tr>
