--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -13,7 +13,7 @@
     </div>
     &nbsp;
     <div class="input-group">
-      <span class="input-group-addon"><i class="fa fa-envelope-o"></i></span>
+      <span class="input-group-addon"><i class="fas fa-envelope-o"></i></span>
       <%= f.email_field :email, autofocus: false, class: "form-control", readonly: true %>
     </div>
     &nbsp;
