--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -67,15 +67,11 @@
                   <li><%= link_to 'Push', new_push_path %></li>
                   <li><%= link_to 'Download DB', dbdump_path %></li>
                   <li><%= link_to 'Anonymize', anonymize_path, data: {confirm: 'Het is een tyfuswerk om dit ongedaan te maken dus weet je het zeker?'} %></li>
-                  <li class="dropdown-header">Openbare pagina's</li>
-                  <li>
-                    <%= link_to public_leden_path do %>
-                      <i class="fa fa-user fa-fw"></i> Leden
-                    <% end %>
-                  </li>
-                  <% PublicPage.where(public: true).each do |pp| %>
-                    <li><%= link_to pp.title, "/#{pp.title}" %></li>
-                  <% end %>
+                <% end %>
+                <li class="dropdown-header">Openbare pagina's</li>
+                <li><%= link_to "Leden", public_leden_path %></li>
+                <% PublicPage.where(public: true).each do |pp| %>
+                  <li><%= link_to pp.title, "/#{pp.title}" %></li>
                 <% end %>
               </ul>
             </li>
