--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -83,22 +83,24 @@
               <li><%= link_to pp.title, "/#{pp.title}" %></li>
             <% end %>
           <% end %>
-          <li id="fat-menu" class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account
-              <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to current_user do %><i class="fa fa-user-circle fa-fw"></i> Profiel<% end %></li>
-              <li><%= link_to personal_sticker_path do %><i class="far fa-sticky-note fa-fw"></i> Mijn stickers<% end %></li>
-              <li><%= link_to oauth_authorized_applications_path do %><i class="fa fa-unlock fa-fw"></i> Mijn authorisaties<% end %></li>
-              <li><%= link_to edit_user_path(current_user) do %><i class="fa fa-wrench fa-fw"></i> Instellingen<% end %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to destroy_user_session_path, method: 'delete' do %>
-                  <i class="fas fa-sign-out-alt fa-fw"></i> Uitloggen
-                <% end %>
-              </li>
-            </ul>
+          <% if current_user %>
+            <li id="fat-menu" class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account
+                <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to current_user do %><i class="fa fa-user-circle fa-fw"></i> Profiel<% end %></li>
+                <li><%= link_to personal_sticker_path do %><i class="far fa-sticky-note fa-fw"></i> Mijn stickers<% end %></li>
+                <li><%= link_to oauth_authorized_applications_path do %><i class="fa fa-unlock fa-fw"></i> Mijn authorisaties<% end %></li>
+                <li><%= link_to edit_user_path(current_user) do %><i class="fa fa-wrench fa-fw"></i> Instellingen<% end %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to destroy_user_session_path, method: 'delete' do %>
+                    <i class="fas fa-sign-out-alt fa-fw"></i> Uitloggen
+                  <% end %>
+                </li>
+              </ul>
           </li>
+          <% end %>
         </ul>
       </div>
     </div>
