--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,16 +66,6 @@ aside {
   }
 }
 
-/* Users index */
-.users {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 3px 0;
-  }
-}
-
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -185,6 +175,10 @@ input {
 }
 
 /* tables */
+.table > tbody > tr > td {
+  vertical-align: middle;
+}
+
 table.tablesorter thead tr th, table.tablesorter tfoot tr th {
   background-color: #e6EEEE;
 }
