--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,29 @@
 <% content_for :title do %>
-    Leden
+  Leden
 <% end %>
-<h4>Leden</h4>
-<%= render "users/table", users: @leden, ratio: true %>
-<% unless @aspiranten.blank? %>
-<h4>Aspiranten</h4>
-<%= render "users/table", users: @aspiranten, ratio: false %>
-<% end %>
-<% unless @oudelullen.blank? %>
-<h4>Oud-leden</h4>
-<%= render "users/table", users: @oudelullen, ratio: false %>
-<% end %>
+
+<ul class="nav nav-pills nav-justified" style="margin-bottom: 16px;">
+  <li class="presentation active"><a data-toggle="tab" href="#leden">Leden</a></li>
+  <% unless @aspiranten.blank? %>
+    <li class="presentation"><a data-toggle="tab" href="#aspiranten">Aspirant-leden</a></li>
+  <% end %>
+  <% unless @oudelullen.blank? %>
+    <li class="presentation"><a data-toggle="tab" href="#oud-leden">Oud-leden</a></li>
+  <% end %>
+</ul>
+
+<div class="tab-content">
+  <div id="leden" class="tab-pane fade in active">
+    <%= render "users/table", users: @leden, ratio: true %>
+  </div>
+  <% unless @aspiranten.blank? %>
+    <div id="aspiranten" class="tab-pane fade">
+      <%= render "users/table", users: @aspiranten, ratio: false %>
+    </div>
+  <% end %>
+  <% unless @oudelullen.blank? %>
+    <div id="oud-leden" class="tab-pane fade">
+      <%= render "users/table", users: @oudelullen, ratio: false %>
+    </div>
+  <% end %>
+</div>
